--- a/Aula 16 - Estilização na prática/style.css
+++ b/Aula 16 - Estilização na prática/style.css
@@ -19,7 +19,7 @@ main {
 
 .content {
     background-color: lightgray;
-    padding: 20px;
+    padding: 0 20px 10px 30px;
     border-radius: 3px;
 }
 
